# glfw3_imgui_glad_starter

./: .gitignore  CMakeLists.txt  README.md  cube.h  main.cpp  scene.cpp  scene.h
glad/: gl.h
imgui/: CMakeLists.txt
